--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* A bug in UploadThing where the label element is marked with "button" data attribute for some reason*/
+label[data-ut-element='button'] {
+  background-color: transparent !important;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @apply border-4 border-dashed border-gray-300 rounded-md;
+}
+label[data-ut-element='button']:focus-within {
+  box-shadow: none !important;
+  @apply border-4 border-primary;
+}
+label[data-ut-element='button']::after {
+  display: none !important;
+}
