--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,3 +77,50 @@ label[data-ut-element='button']:focus-within {
 label[data-ut-element='button']::after {
   display: none !important;
 }
+
+/* move to its own file later */
+abbr:where([title]) {
+  text-decoration: none;
+}
+.react-calendar__navigation {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: 1fr;
+  place-items: center;
+  align-items: space-around;
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+.react-calendar__tile {
+  min-height: 5rem;
+}
+.react-calendar__tile abbr {
+  font-size: 1.4rem;
+}
+.react-calendar__tile:hover {
+  @apply bg-gray-100 rounded-md;
+}
+.react-calendar__tile--active {
+  @apply bg-primary/60 text-white rounded-md;
+}
+.react-calendar__tile--active:hover {
+  @apply bg-primary/80;
+}
+.react-calendar__tile--active * {
+  @apply text-white;
+}
+.react-calendar__tile--now abbr {
+  text-decoration: underline;
+}
+.react-calendar__month-view__weekdays {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 1fr;
+  place-items: center;
+  font-size: 1.4rem;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  text-align: center;
+  @apply text-gray-700;
+}
