--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,7 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
+    --ring-background: 222.2 84% 4.9%;
     --radius: 0.5rem;
   }
 
@@ -35,7 +36,7 @@
     --accent-foreground: 220 78% 11%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
+    --border: 214.3 31.8% 70.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
   }
