--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,48 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 192 100% 50%;
-    --accent-foreground: 220 78% 11%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 35%;
-    --ring-background: 222.2 84% 85%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 192 100% 50%;
-    --accent-foreground: 220 78% 11%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 70.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 66% 80%;
-    --ring-background: 222.2 84% 9%;
-  }
-}
-
-@layer base {
   body {
+    @apply bg-white text-black;
+
     font-family:
       system-ui,
       -apple-system,
@@ -56,24 +17,6 @@
       Cantarell,
       'Open Sans',
       'Helvetica Neue',
-      sans-serif @apply bg-background text-foreground;
+      sans-serif;
   }
-}
-
-/* A bug in UploadThing where the label element is marked with "button" data attribute for some reason*/
-label[data-ut-element='button'] {
-  background-color: transparent !important;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @apply border-4 border-dashed border-gray-300 rounded-md;
-}
-label[data-ut-element='button']:focus-within {
-  box-shadow: none !important;
-  @apply border-4 border-primary;
-}
-label[data-ut-element='button']::after {
-  display: none !important;
 }
